# DeskRemoto

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client.vcxproj.filters  client1.cpp
DeskRemoto/: CMakeLists.txt  DeskRemoto.cpp  DeskRemoto.vcxproj.filters  client.cpp
DeskRemoto/src/: client.cpp  server.cpp
DeskRemoto/x64/Debug/: DeskRemoto.exe.recipe  DeskRemoto.ilk  vc143.idb
DeskRemoto/x64/Debug/DeskRemoto.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DeskRemoto.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Server/: CMakeLists.txt  Server.cpp  Server.vcxproj.filters  server1.cpp
